# rust-timecode-parser

./: Cargo.toml
src/ltc_decoder/: bit_decoder.rs  mod.rs
src/ltc_frame/: mod.rs
testfiles/: README.md
